gen/org/lexasub/langos/langosParser.java
// Generated from /home/support-pc/Рабочий стол/техподдержка/отчеты/Копытцев А А/others/inteljidea/langA_/langos.g4 by ANTLR 4.10.1
package org.lexasub.langos;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class langosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, IMPORT=2, SYNTAX=3, RETURN=4, WITH=5, QUEST=6, STAR=7, PLUS=8, ASSIGN=9, 
		DOT=10, LPAREN=11, RPAREN=12, LBRACE=13, RBRACE=14, LEND=15, REND=16, 
		BAR=17, GT=18, LT=19, CIRCUMFLEX=20, ID=21, COLON=22, SEMI=23, COMA=24, 
		DOUBLECOLON=25, ARROW=26, CHAR=27, STRING=28;
	public static final int
		RULE_rulelist = 0, RULE_rule_ = 1, RULE_alternatives = 2, RULE_alternatives_strong = 3, 
		RULE_alternative = 4, RULE_bnf_not = 5, RULE_element = 6, RULE_range_ = 7, 
		RULE_optional_ = 8, RULE_zeroormore = 9, RULE_zeroormore_non_gready = 10, 
		RULE_oneormore = 11, RULE_syntax_ = 12, RULE_syntax_namespace_obj = 13, 
		RULE_syntax_impl = 14, RULE_syntax_return = 15, RULE_syntax_rule_call = 16, 
		RULE_syntax_lambda = 17, RULE_syntax_object_getter = 18, RULE_syntax_text_getter = 19, 
		RULE_syntax_method_call_begin = 20, RULE_syntax_method_call_body = 21, 
		RULE_syntax_method_call = 22, RULE_syntax_expr = 23, RULE_syntax_expr_strong = 24, 
		RULE_syntax_impl_body = 25, RULE_import_ = 26, RULE_program = 27, RULE_entry_point = 28, 
		RULE_id_list = 29, RULE_id_list_strong = 30, RULE_id_strong = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"rulelist", "rule_", "alternatives", "alternatives_strong", "alternative", 
			"bnf_not", "element", "range_", "optional_", "zeroormore", "zeroormore_non_gready", 
			"oneormore", "syntax_", "syntax_namespace_obj", "syntax_impl", "syntax_return", 
			"syntax_rule_call", "syntax_lambda", "syntax_object_getter", "syntax_text_getter", 
			"syntax_method_call_begin", "syntax_method_call_body", "syntax_method_call", 
			"syntax_expr", "syntax_expr_strong", "syntax_impl_body", "import_", "program", 
			"entry_point", "id_list", "id_list_strong", "id_strong"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'import'", "'syntax'", "'return'", "'with'", "'?'", "'*'", 
			"'+'", "'='", "'.'", "')'", "'('", "'}'", "'{'", "']'", "'['", "'|'", 
			"'>'", "'<'", "'^'", null, "': '", "';'", "','", "'::'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "IMPORT", "SYNTAX", "RETURN", "WITH", "QUEST", "STAR", "PLUS", 
			"ASSIGN", "DOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LEND", "REND", 
			"BAR", "GT", "LT", "CIRCUMFLEX", "ID", "COLON", "SEMI", "COMA", "DOUBLECOLON", 
			"ARROW", "CHAR", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "langos.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public langosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RulelistContext extends ParserRuleContext {
		public List<Rule_Context> rule_() {
			return getRuleContexts(Rule_Context.class);
		}
		public Rule_Context rule_(int i) {
			return getRuleContext(Rule_Context.class,i);
		}
		public RulelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterRulelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitRulelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitRulelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulelistContext rulelist() throws RecognitionException {
		RulelistContext _localctx = new RulelistContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rulelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(64);
				rule_();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_Context extends ParserRuleContext {
		public TerminalNode ID() { return getToken(langosParser.ID, 0); }
		public TerminalNode COLON() { return getToken(langosParser.COLON, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(langosParser.SEMI, 0); }
		public Rule_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterRule_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitRule_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitRule_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_Context rule_() throws RecognitionException {
		Rule_Context _localctx = new Rule_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_rule_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(ID);
			setState(71);
			match(COLON);
			setState(72);
			alternatives();
			setState(73);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativesContext extends ParserRuleContext {
		public List<AlternativeContext> alternative() {
			return getRuleContexts(AlternativeContext.class);
		}
		public AlternativeContext alternative(int i) {
			return getRuleContext(AlternativeContext.class,i);
		}
		public List<TerminalNode> BAR() { return getTokens(langosParser.BAR); }
		public TerminalNode BAR(int i) {
			return getToken(langosParser.BAR, i);
		}
		public AlternativesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternatives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterAlternatives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitAlternatives(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitAlternatives(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlternativesContext alternatives() throws RecognitionException {
		AlternativesContext _localctx = new AlternativesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alternatives);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			alternative();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BAR) {
				{
				{
				setState(76);
				match(BAR);
				setState(77);
				alternative();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alternatives_strongContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(langosParser.RPAREN, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(langosParser.LPAREN, 0); }
		public Alternatives_strongContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternatives_strong; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterAlternatives_strong(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitAlternatives_strong(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitAlternatives_strong(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Alternatives_strongContext alternatives_strong() throws RecognitionException {
		Alternatives_strongContext _localctx = new Alternatives_strongContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_alternatives_strong);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(RPAREN);
			setState(84);
			alternatives();
			setState(85);
			match(LPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitAlternative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitAlternative(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_alternative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				element();
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RPAREN) | (1L << ID) | (1L << CHAR) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bnf_notContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(langosParser.RPAREN, 0); }
		public TerminalNode CIRCUMFLEX() { return getToken(langosParser.CIRCUMFLEX, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(langosParser.LPAREN, 0); }
		public Bnf_notContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bnf_not; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterBnf_not(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitBnf_not(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitBnf_not(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bnf_notContext bnf_not() throws RecognitionException {
		Bnf_notContext _localctx = new Bnf_notContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bnf_not);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(RPAREN);
			setState(93);
			match(CIRCUMFLEX);
			setState(94);
			element();
			setState(95);
			match(LPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public Bnf_notContext bnf_not() {
			return getRuleContext(Bnf_notContext.class,0);
		}
		public Zeroormore_non_greadyContext zeroormore_non_gready() {
			return getRuleContext(Zeroormore_non_greadyContext.class,0);
		}
		public Optional_Context optional_() {
			return getRuleContext(Optional_Context.class,0);
		}
		public ZeroormoreContext zeroormore() {
			return getRuleContext(ZeroormoreContext.class,0);
		}
		public OneormoreContext oneormore() {
			return getRuleContext(OneormoreContext.class,0);
		}
		public TerminalNode ID() { return getToken(langosParser.ID, 0); }
		public Range_Context range_() {
			return getRuleContext(Range_Context.class,0);
		}
		public TerminalNode CHAR() { return getToken(langosParser.CHAR, 0); }
		public TerminalNode STRING() { return getToken(langosParser.STRING, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_element);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				bnf_not();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				zeroormore_non_gready();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				optional_();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				zeroormore();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				oneormore();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				match(ID);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(103);
				range_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(104);
				match(CHAR);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(105);
				match(STRING);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Range_Context extends ParserRuleContext {
		public List<TerminalNode> CHAR() { return getTokens(langosParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(langosParser.CHAR, i);
		}
		public List<TerminalNode> DOT() { return getTokens(langosParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(langosParser.DOT, i);
		}
		public Range_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_range_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterRange_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitRange_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitRange_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Range_Context range_() throws RecognitionException {
		Range_Context _localctx = new Range_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_range_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(CHAR);
			setState(109);
			match(DOT);
			setState(110);
			match(DOT);
			setState(111);
			match(CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optional_Context extends ParserRuleContext {
		public Alternatives_strongContext alternatives_strong() {
			return getRuleContext(Alternatives_strongContext.class,0);
		}
		public TerminalNode QUEST() { return getToken(langosParser.QUEST, 0); }
		public Optional_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterOptional_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitOptional_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitOptional_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Optional_Context optional_() throws RecognitionException {
		Optional_Context _localctx = new Optional_Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_optional_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			alternatives_strong();
			setState(114);
			match(QUEST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZeroormoreContext extends ParserRuleContext {
		public Alternatives_strongContext alternatives_strong() {
			return getRuleContext(Alternatives_strongContext.class,0);
		}
		public TerminalNode STAR() { return getToken(langosParser.STAR, 0); }
		public ZeroormoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroormore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterZeroormore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitZeroormore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitZeroormore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ZeroormoreContext zeroormore() throws RecognitionException {
		ZeroormoreContext _localctx = new ZeroormoreContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_zeroormore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			alternatives_strong();
			setState(117);
			match(STAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Zeroormore_non_greadyContext extends ParserRuleContext {
		public ZeroormoreContext zeroormore() {
			return getRuleContext(ZeroormoreContext.class,0);
		}
		public TerminalNode QUEST() { return getToken(langosParser.QUEST, 0); }
		public Zeroormore_non_greadyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroormore_non_gready; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterZeroormore_non_gready(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitZeroormore_non_gready(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitZeroormore_non_gready(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Zeroormore_non_greadyContext zeroormore_non_gready() throws RecognitionException {
		Zeroormore_non_greadyContext _localctx = new Zeroormore_non_greadyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_zeroormore_non_gready);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			zeroormore();
			setState(120);
			match(QUEST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OneormoreContext extends ParserRuleContext {
		public Alternatives_strongContext alternatives_strong() {
			return getRuleContext(Alternatives_strongContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(langosParser.PLUS, 0); }
		public OneormoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneormore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterOneormore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitOneormore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitOneormore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneormoreContext oneormore() throws RecognitionException {
		OneormoreContext _localctx = new OneormoreContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_oneormore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			alternatives_strong();
			setState(123);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Syntax_Context extends ParserRuleContext {
		public TerminalNode SYNTAX() { return getToken(langosParser.SYNTAX, 0); }
		public TerminalNode ID() { return getToken(langosParser.ID, 0); }
		public TerminalNode RBRACE() { return getToken(langosParser.RBRACE, 0); }
		public RulelistContext rulelist() {
			return getRuleContext(RulelistContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(langosParser.LBRACE, 0); }
		public List<Import_Context> import_() {
			return getRuleContexts(Import_Context.class);
		}
		public Import_Context import_(int i) {
			return getRuleContext(Import_Context.class,i);
		}
		public Syntax_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterSyntax_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitSyntax_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitSyntax_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Syntax_Context syntax_() throws RecognitionException {
		Syntax_Context _localctx = new Syntax_Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_syntax_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(SYNTAX);
			setState(126);
			match(ID);
			setState(127);
			match(RBRACE);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(128);
				import_();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			rulelist();
			setState(135);
			match(LBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Syntax_namespace_objContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(langosParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(langosParser.ID, i);
		}
		public TerminalNode DOUBLECOLON() { return getToken(langosParser.DOUBLECOLON, 0); }
		public Syntax_namespace_objContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax_namespace_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).enterSyntax_namespace_obj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof langosListener ) ((langosListener)listener).exitSyntax_namespace_obj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langosVisitor ) return ((langosVisitor<? extends T>)visitor).visitSyntax_namespace_obj(this);
			else return visitor.visitChildren(this);
		}
	}
